changed projects page to have containers that fit content on mobile view to prevent overflow

--- a/src/Components/HugeProject/HugeProject.css
+++ b/src/Components/HugeProject/HugeProject.css
@@ -85,7 +85,7 @@
 
 @media only screen and (max-width: 414px) {
     .hugeProjectContainer {
-        height: 26.375rem;
+        height: fit-content;
         width: 20rem;
         margin-bottom: 1rem;
     }
