--- a/src/Pages/Projects/Projects.css
+++ b/src/Pages/Projects/Projects.css
@@ -21,7 +21,4 @@
     .projectsContainer {
         padding: 0;
     }
-    .hugeProjectsContainer {
-        height: fit-content;
-    }
 }
